--- a/aphantasia_priming_analysis.qmd
+++ b/aphantasia_priming_analysis.qmd
@@ -27,6 +27,7 @@ shelf(
   easystats,      # collection of data analysis packages
   tidymodels,     # collection of packages for a tidy modelling workflow
   bayesian,       # bayesian modelling with brms and tidymodels
+  multilevelmod,  # multilevel modelling with lmer
   mclust,         # mixture clustering
   ggpubr,         # ggplot tools
   viridis,        # ggplot colour-blind friendly palettes
@@ -607,7 +608,7 @@ df_rt <-
 bind_rows(df_rt[[1]], df_rt[[2]]) %>% display
 ```
 
-For this more precise analysis of mean RTs, we are going to use an outlier detection method based on the Median Absolute Deviation (MAD). A common threshold used for outlier detection with MADs is $median \ \pm \ 3 \cdot MAD$ (Hampel filter, see Enderlein, 1987). However, the low boundary of this interval would be aberrant in our case, and all the participants with fast RT means stay above the $median \ - \ 1.5 \cdot MAD$. As for the high threshold, the choice the $median \ + \ 3 \cdot MAD$ would set a highly conservative maximum (e.g. 1361ms for the explicit task) and bring the total number of removed trials over 13%. Therefore, after careful examination of the ranges, and in order to keep as many trials as possible, we chose to set the upper threshold at $median \ + \ 5 \cdot MAD$ (i.e. 1797 for the explicit task, and 1386ms for the implicit task), resulting in an overall deletion of 7.9% of trials in the explicit task and 8.9% of trials in the implicit one in this whole data preprocessing. The resulting distributions of RTs for each participant are represented in @fig-rt_per_participant.
+For this more precise analysis of mean RTs, we are going to use an outlier detection method based on the Median Absolute Deviation (MAD). Common thresholds used for outlier detection with MADs are $median \ \pm \ 3 \cdot MAD$ (Hampel filter; see Enderlein, 1987). However, the low boundary of this interval would be aberrant in our case, as all the participants with fast RT means stay above the $median \ - \ 1.5 \cdot MAD$. As for the high threshold, the choice the $median \ + \ 3 \cdot MAD$ would set a highly conservative maximum (e.g. 1361ms for the explicit task) and bring the total number of removed trials over 13%. Therefore, after careful examination of the ranges, and in order to keep as many trials as possible, we chose to set the upper threshold at $median \ + \ 5 \cdot MAD$ (i.e. 1797ms for the explicit task, and 1386ms for the implicit task), resulting in an overall deletion of 7.9% of trials in the explicit task and 8.9% of trials in the implicit one in this whole data preprocessing. The resulting distributions of RTs for each participant are represented in @fig-rt_per_participant.
 
 ```{r rt_per_participant}
 #| echo: false
@@ -698,10 +699,6 @@ Our analyses aim to evaluate the predictive abilities of several variables on on
 
 - **Color** conditions, with two levels: colored and uncolored.
 
-Two potential confounding variables could also be evaluated : 
-
-- **Sex**, with two levels: F and H
-
 - **Age**, a continuous variable ranging from 18 to 65 (M = `r mean(df_questionnaires$age) %>% round(digits = 2)`, SD = `r sd(df_questionnaires$age) %>% round(digits = 2)`)
 
 Two sub-levels of the responses can also be evaluated:
@@ -710,9 +707,9 @@ Two sub-levels of the responses can also be evaluated:
 
 - the dependency between response times for **each orientation** caused by the repetition of stimuli
 
-This structure will be modelled using Bayesian Multilevel Models (also called hierarchical models), allowing us to add the sub-levels of the hierarchy of predictors we described above in the model. Multilevel models can also be specified with skew-normal distributions, therefore bypassing the need to transform the skewed RT data.
+This structure will be modelled using Multilevel Models (also called hierarchical or mixed models), allowing us to add the sub-levels of the hierarchy of predictors we described above in the model. RT data will be transformed using a Box-Cox transformation to bring the distributions closer to normality and improve the quality of the models.
 
-For a participant $i$ with a given Group, age, spatial imagery and a specific orientation, in the Congruency condition $j$ and the Color condition $k$, The maximal model of the resulting $RT_{ijk}$ based on the ***Group*** and including all the predictors can be specified as such (in a simplified form omitting the skew parameters and interactions for clarity):
+For a participant $i$ with a given Group, age, spatial imagery and a specific orientation, in the Congruency condition $j$ and the Color condition $k$, The maximal model of the resulting $RT_{ijk}$ based on the ***Group*** and including all the predictors can be specified as such (in a simplified form omitting the interaction parameters for clarity):
 
 $$
 \begin{aligned}
@@ -720,16 +717,21 @@ RT_{ijk} = \alpha + \alpha_{subject[i]} + \alpha_{orientation[i]} + \beta_{1} \t
 \end{aligned}
 $$
 
-Where the $\alpha$ values are random intercepts per subject and orientation, considered as prior distributions in a Bayesian framework. Likewise, the maximal model based on ***Visual Imagery*** as a continuous predictor can be specified as such:
+Likewise, the maximal model based on ***Visual Imagery*** as a continuous predictor can be specified as such:
 
 $$
 \begin{aligned}
 RT_{ijk} = \alpha + \alpha_{subject[i]} + \alpha_{orientation[i]} + \beta_{1} \times Visual \ Imagery_{i} + \beta_{2} \times Spatial \ Imagery_{i}+ \beta_{3} \times Congruence_{j} + \beta_{4} \times Color_{k} + \beta_{5} \times Age_{i}
 \end{aligned}
 $$
-## Fitting the model
+
+## Fitting the models
+
+The mixed models will be fitted using `tidymodels` workflows.
 
 ```{r}
+#| eval: false
+#| include: false
 
 # --- Setup --------------------------------------------------------------------
 
@@ -737,7 +739,7 @@ $$
 rt_recipe_explicit <- 
   df_explicit_rt %>%
   select(-vviq80) %>% 
-  recipe %>%
+  recipe() %>%
   update_role(rt_explicit, new_role = "outcome") %>%
   update_role(
     subjectid, age, sex,
@@ -746,14 +748,15 @@ rt_recipe_explicit <-
     new_role = "predictor"
     ) %>%
   add_role(subjectid, orientation, new_role = "group") %>%
-  step_normalize(age)
+  step_normalize(age) %>% 
+  step_BoxCox(rt_explicit)
 
 # --- preprocessing recipe for implicit data ---
 rt_recipe_implicit <- 
-  df_explicit_rt %>%
+  df_implicit_rt %>%
   select(-vviq80) %>% 
   recipe %>%
-  update_role(rt_explicit, new_role = "outcome") %>%
+  update_role(rt_implicit, new_role = "outcome") %>%
   update_role(
     subjectid, age, sex,
     aphantasia, visual_imagery, spatial_imagery,
@@ -761,31 +764,53 @@ rt_recipe_implicit <-
     new_role = "predictor"
     ) %>%
   add_role(subjectid, orientation, new_role = "group") %>%
-  step_normalize(age)
+  step_normalize(age) %>% 
+  step_BoxCox(rt_implicit)
 
-# --- setting the type of bayesian models to be fitted ---
-rt_model <-
-  bayesian (
-    family = skew_normal()
-  ) %>%
-  set_engine("brms") %>% 
-  set_mode("regression")
+# --- type of bayesian models to be fitted ---
+# rt_model_bayes <-
+#   bayesian (
+#     family = skew_normal()
+#   ) %>%
+#   set_engine("brms") %>% 
+#   set_mode("regression")
 
-# --- Fitting the models -------------------------------------------------------
+# ---type of mixed models to be fitted ---
+rt_model_lmer <-
+  linear_reg() %>% 
+  set_engine("lmer")
 
+# --- Specifying the models ----------------------------------------------------
+
+# --- Group analyses ---
+# 
 # Explicit task
 
-# --- fit 1: fixed effects and subject intercept ---
-rt_ex_fit1 <-
-  workflow () %>% 
+# model 1: maximal model specs
+rt_ex_modg1 <-
+  workflow () %>%
   add_recipe(rt_recipe_explicit) %>%
   add_model(
-    spec = rt_model,
-    formula = rt_explicit ~ aphantasia + congruence + color + (1|subjectid)
-  ) %>% 
-  fit(data = df_explicit_rt)
-```
+    spec = rt_model_lmer,
+    formula = rt_explicit ~ aphantasia * congruence * color * spatial_imagery * age + (1|subjectid) + (1|orientation)
+    )
 
+# fitting
+rt_ex_modg1_fit <- rt_ex_modg1 %>% fit(df_explicit_rt) %>% extract_fit_engine
+# summary df
+# rt_ex_modg1_fit %>% extract_fit_engine %>% report %>% as.data.frame %>% summary
+# assumptions check
+rt_ex_modg1_fit %>% check_model()
+
+# model 2: intercepts
+# rt_ex_modg2 <-
+#   rt_ex_mod1 %>% 
+#   update_model(
+#     spec = rt_model_lmer,
+#     formula = rt_explicit ~ aphantasia * congruence * color + (1|subjectid))
+
+# --- Results ---
+```
 
 
 
